--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -995,6 +995,12 @@ $list: $grey 92%, $white 8%;
   font-weight: $regular;
   color: $aqua-text;
 }
+@mixin b4_12px_montserrat_med_aqua{
+  font-family: $font-Montserrat;
+  font-size: 12px;
+  font-weight: $medium;
+  color: $aqua-text;
+}
 
 @mixin b4_12px_montserrat_semibold_charcoal{
   font-family: $font-Montserrat;
