--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -92,6 +92,10 @@ li {
   padding-top: 20px !important;
 }
 
+.padd-t-0{
+  padding-top: 0px !important;
+}
+
 a {
   color: $cerise;
   cursor: pointer;
