--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -155,6 +155,10 @@ a {
   margin-bottom: 30px;
 }
 
+.margin-b-20 {
+  margin-bottom: 20px;
+}
+
 .error-msg {
   &.error-radio {
     position: absolute;
