--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -32,14 +32,14 @@
 
 .disabled-input {
   background-color: $white !important;
-  color: tint($charcoal19, 50%);
+  color: tint(#000, 50%);
   &input, input, select {
   background-color: $white !important;
-  color: tint($charcoal19, 50%);
+  color: tint(#000, 50%);
   }
   .Dropdown-control {
   background-color: $white !important;
-    color: tint($charcoal19, 50%);
+    color: tint(#000, 50%);
   }
 }
 
@@ -49,8 +49,8 @@
     border: 1px solid #eee;
     width: 100%;
     padding: 10px;
-    font-size: 14px;
-    line-height: 25px;
+    @include b4_12px_montserrat_charcoal();
+        line-height: 25px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
