--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -448,6 +448,10 @@ font-weight: bold;
 .voffset9 {
   margin-top: 150px;
 }
+.marginy24{
+  margin-top: 24px;
+  margin-bottom: 24px;
+}
 
 .paddBottom-0 {
   padding-bottom: 0px;
