--- a/src/styles/partials/_form.scss
+++ b/src/styles/partials/_form.scss
@@ -27,7 +27,8 @@
 }
 
 .form-subheading {
-  @include b5_10px_montserrat_charcoal();
+  // @include b5_10px_montserrat_charcoal();
+  @include b4_12px_montserrat_charcoal();
 }
 
 .disabled-input {
