--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -472,7 +472,7 @@ hr {
 
   .otp-timer{
     @include b4_12px_montserrat_light_charcoal();
-    padding: 20px 0px 30px 0;
+    padding: 20px 0px 0px 0;
     letter-spacing: 0.5px;
     .otp-resend{
       font-weight: 400;
@@ -577,6 +577,11 @@ hr {
     padding-top: 25px;
     border-bottom: 1px solid $charcoal19;
     letter-spacing: 0.5px;
+    cursor: pointer;
+    &.otp-redeem{
+      margin: 0px auto 40px auto;
+      width: fit-content;
+    }
     &:hover{
       color: #3C7979 !important;
       border-bottom: 1px solid #3C7979 !important;
